# ndi-rist-server

./: .gitmodules  CMakeLists.txt  CMakeLists.txt.old  CMakePresets.json  CMakePresets.json.old  HACKING.md  README.md
cmake/: dev-mode.cmake  install-rules.cmake  variables.cmake
src/: main.cpp
